<resources>
    <string name="app_name">Harcama Takip Uygulaması</string>
    <string name="text_homeFragmentTopConstraintLayoutHello">Merhaba</string>
    <string name="text_homeFragmentTopConstraintLayoutUserName">Semi Bey</string>
    <string name="text_homeFragmentTopConstraintLayoutSpending">Harcamanız</string>
    <string name="text_homeFragmentTopConstraintLayoutSpendingMoney">0 TL</string>
    <string name="text_homeFragmentMidConstraintLayoutTL">TL</string>
    <string name="text_homeFragmentMidConstraintLayoutSterling">Sterlin</string>
    <string name="text_homeFragmentMidConstraintLayoutEuro">Euro</string>
    <string name="text_homeFragmentMidConstraintLayoutDollar">Dolar</string>
    <string name="text_homeFragmentCoordinatorLayoutFloatingActionButton">EKLE</string>
    <string name="text_spendingAddFragmentTitle">Harcama Ekle</string>
    <string name="hint_spendingAddFragmentDescription">Açıklama</string>
    <string name="hint_spendingAddFragmentSpending">Harcama</string>
    <string name="text_spendingAddFragmentRadioButtonBill">Fatura</string>
    <string name="text_spendingAddFragmentRadioButtonRent">Kira</string>
    <string name="text_spendingAddFragmentRadioButtonOther">Diğer</string>
    <string name="text_spendingAddFragmentTL">TL</string>
    <string name="text_spendingAddFragmentDollar">Dolar</string>
    <string name="text_spendingAddFragmentEuro">Euro</string>
    <string name="text_spendingAddFragmentSterling">Sterlin</string>
    <string name="text_spendingAddFragmentAddButton">EKLE</string>
    <string name="text_userNameFragmentTitle">İsim Değiştir</string>
    <string name="hint_userNameFragmentNameInput">İsminizi Giriniz</string>
    <string name="text_userNameFragmentRadioButtonMale">Erkek</string>
    <string name="text_userNameFragmentRadioButtonFemale">Kadın</string>
    <string name="text_userNameFragmentRadioButtonOthers">Belirtmek İstemiyorum</string>
    <string name="text_userNameFragmentSaveButton">KAYDET</string>
    <string name="text_splashScreenFragmentAppName">Harcama Takip Uygulması</string>
    <string name="text_firstOnBoardingScreenFragmentFirstDescription">Karşınızda Harcama Takip Uygulaması</string>
    <string name="text_firstOnBoardingScreenFragmentSecondDescription">Artık karışıklığa son !</string>
    <string name="text_secondOnBoardingScreenFragmentFirstDescription">Kolayca Kategorilendir</string>
    <string name="text_secondOnBoardingScreenFragmentSecondDescription">Harcamalarınızı kategorileyerek daha kolay takip edin !</string>
    <string name="text_thirdOnBoardingScreenFragmentFirstDescription">Farklı Para Birimleriyle Takip Et</string>
    <string name="text_thirdOnBoardingScreenFragmentSecondDescription">Harcamalarınızı TL Dolar Euro Sterlin para birimleriyle sürekli güncellenen kurla takip edin !</string>
    <string name="text_firstOnBoardingScreenFragmentNextButton">GEÇ</string>
    <string name="text_secondOnBoardingScreenFragmentNextButton">GEÇ</string>
    <string name="text_thirdOnBoardingScreenFragmentNextButton">BİTİR</string>
    <string name="hint_homeFragmentTopConstraintLayoutUserName">Bir isim</string>
    <string name="toolsText_cardViewMoney">1234567890</string>
    <string name="toolsText_cardViewDescription">Spending Description</string>
    <string name="contentDescription_cardViewImageView">Image</string>
    <string name="contentDescription_spendingDetailFragmentImageButton">ImageButton</string>
    <string name="contentDescription_spendingDetailFragmentImageView">ImageView</string>
    <string name="text_spendingDetailFragmentDeleteButton">SİL</string>
    <string name="con_fail">İnternete Bağlanılamıyor</string>
</resources>