<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_homeFragmentLinearLayout"
        android:layout_marginTop="@dimen/margin_homeFragmentLinearLayout"
        android:layout_marginEnd="@dimen/margin_homeFragmentLinearLayout"
        android:orientation="vertical"
        tools:context=".home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_homeFragmentTopConstraintLayoutHeight"
            android:background="@drawable/home_fragment_constraint_layout_shape">

            <TextView
                android:id="@+id/textView_homeFragmentTopConstraintLayoutHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_homeFragmentTopConstraintLayoutHello"
                android:textSize="@dimen/size_homeFragmentTopConstraintLayoutText"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/marginStart_homeFragmentTopConstraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout_homeFragmentTopConstraintLayout"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_homeFragmentTopConstraintLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart_homeFragmentTopConstraintLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_homeFragmentTopConstraintLayoutHello"
                app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView_homeFragmentTopConstraintLayoutUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/size_homeFragmentTopConstraintLayoutText2"
                android:textColorHint="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout_homeFragmentTopConstraintLayout"
                 />

            <TextView
                android:id="@+id/textView_homeFragmentTopConstraintLayoutUserGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/size_homeFragmentTopConstraintLayoutText2"
                android:textColorHint="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toEndOf="@id/textView_homeFragmentTopConstraintLayoutUserName"
                app:layout_constraintTop_toTopOf="@id/textView_homeFragmentTopConstraintLayoutUserName"
                app:layout_constraintBottom_toBottomOf="@id/textView_homeFragmentTopConstraintLayoutUserName"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView_homeFragmentTopConstraintLayoutSpending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_homeFragmentTopConstraintLayoutSpending"
                android:textColor="@color/white"
                android:textSize="@dimen/size_homeFragmentTopConstraintLayoutText"
                android:layout_marginEnd="@dimen/marginEnd_homeFragmentTopConstraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textView_homeFragmentTopConstraintLayoutSpendingMoney"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/textView_homeFragmentTopConstraintLayoutSpendingMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_homeFragmentTopConstraintLayoutSpendingMoney"
                android:textColor="@color/white"
                android:textSize="@dimen/size_homeFragmentTopConstraintLayoutText2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView_homeFragmentTopConstraintLayoutSpending"
                app:layout_constraintStart_toStartOf="@+id/textView_homeFragmentTopConstraintLayoutSpending"
                app:layout_constraintTop_toBottomOf="@+id/textView_homeFragmentTopConstraintLayoutSpending" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_homeFragmentMidConstraintLayoutHeight">

            <RadioGroup
                android:id="@+id/radioGroup_homeFragmentMidConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@id/radioButton_spendingAddFragmentTL"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <RadioButton
                    android:id="@+id/radioButton_spendingAddFragmentTL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_spendingAddFragmentTL"
                    android:textSize="@dimen/size_spendingAddFragmentRadioButtonText"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/radioButton_spendingAddFragmentDollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_spendingAddFragmentDollar"
                    android:textSize="@dimen/size_spendingAddFragmentRadioButtonText"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/radioButton_spendingAddFragmentEuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_spendingAddFragmentEuro"
                    android:textSize="@dimen/size_spendingAddFragmentRadioButtonText"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/radioButton_spendingAddFragmentSterling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_spendingAddFragmentSterling"
                    android:textSize="@dimen/size_spendingAddFragmentRadioButtonText"
                    android:gravity="center" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_homeFragmentCoordinatorLayoutSpending"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButton_homeFragmentCoordinatorLayoutAddSpending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginEnd_homeFragmentCoordinatorLayoutFloatingActionButton"
                android:layout_marginBottom="@dimen/marginBottom_homeFragmentCoordinatorLayoutFloatingActionButton"
                android:backgroundTint="@color/yellow"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/text_homeFragmentCoordinatorLayoutFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="@dimen/size_homeFragmentTopConstraintLayoutText"
                app:icon="@android:drawable/ic_input_add"
                app:iconTint="@color/white"
                android:layout_gravity="bottom|end" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
