<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboarding.screens.SecondOnBoardingScreen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView_secondOnBoardingScreenFragmentAnimation"
        android:layout_width="@dimen/layoutWidth_secondOnBoardingScreenFragmentAnimation"
        android:layout_height="@dimen/layoutHeight_secondOnBoardingScreenFragmentAnimation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView_secondOnBoardingScreenFragmentFirstDescription"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/second_on_boarding_screen_animation" />

    <TextView
        android:id="@+id/textView_secondOnBoardingScreenFragmentFirstDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_secondOnBoardingScreenFragmentFirstDescription"
        android:textSize="@dimen/size_secondOnBoardingScreenFragmentFirstDescriptionText"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView_secondOnBoardingScreenFragmentAnimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_secondOnBoardingScreenFragmentSecondDescription"/>

    <TextView
        android:id="@+id/textView_secondOnBoardingScreenFragmentSecondDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_secondOnBoardingScreenFragmentSecondDescription"
        android:text="@string/text_secondOnBoardingScreenFragmentSecondDescription"
        android:textSize="@dimen/size_secondOnBoardingScreenFragmentSecondDescriptionText"
        app:layout_constraintTop_toBottomOf="@+id/textView_secondOnBoardingScreenFragmentFirstDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_secondOnBoardingScreenFragmentNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/text_secondOnBoardingScreenFragmentNextButton"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/marginStart_secondOnBoardingScreenFragmentNextButton"
        android:layout_marginBottom="@dimen/marginBottom_secondOnBoardingScreenFragmentNextButton"
        app:strokeColor="@color/orange"
        app:strokeWidth="@dimen/strokeWidth_secondOnBoardingScreenFragmentNextButton"
        app:cornerRadius="@dimen/radius_secondOnBoardingScreenFragmentNextButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

</androidx.constraintlayout.widget.ConstraintLayout>